--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vision Pro TRANSLATOR | نظارات ذكية بالذكاء الاصطناعي</title>
+    <title>Atlas Vision | نظارات ذكية بالذكاء الاصطناعي</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon -->
@@ -166,7 +166,7 @@
         <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
             <!-- Logo -->
             <div class="flex items-center gap-3 cursor-pointer group" onclick="window.scrollTo(0,0)">
-                <img src="logo.png" alt="شعار Vision Pro TRANSLATOR"
+                <img src="synapse-logo.png" alt="شعار Atlas Vision"
                     class="h-10 w-auto object-contain hover:opacity-80 transition-opacity">
             </div>
 
@@ -223,7 +223,7 @@
     <section class="relative w-full min-h-screen flex items-center justify-center pt-20 overflow-hidden">
         <!-- Background Image -->
         <div class="absolute inset-0 z-0">
-            <img src="hero-bg-new.png" alt="خلفية Vision Pro TRANSLATOR" class="w-full h-full object-cover opacity-40">
+            <img src="hero-bg-new.png" alt="خلفية Atlas Vision" class="w-full h-full object-cover opacity-40">
             <div class="absolute inset-0 bg-gradient-to-b from-black/80 via-black/50 to-[#020202]"></div>
         </div>
 
@@ -384,7 +384,7 @@
                     </div>
                     <h3 class="text-xl text-white mb-3 font-bold">المزامنة</h3>
                     <p class="text-sm text-neutral-500 max-w-xs">اتصل بهاتفك الذكي عبر البلوتوث 5.3 في ثوانٍ. تطبيق
-                        Vision Pro TRANSLATOR يعمل بصمت في الخلفية.</p>
+                        Atlas Vision يعمل بصمت في الخلفية.</p>
                 </div>
 
                 <!-- Step 2 -->
@@ -460,7 +460,7 @@
                     </div>
                     <img src="hero-bg.png"
                         class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition-opacity duration-700 transform group-hover:scale-105"
-                        alt="تقنية نظارات Vision Pro TRANSLATOR">
+                        alt="تقنية نظارات Atlas Vision">
                 </div>
             </div>
         </div>
@@ -563,9 +563,9 @@
                         d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                 </svg>
             </div>
-            <h2 class="text-2xl md:text-3xl font-bold text-white mb-4">وعد Vision Pro TRANSLATOR</h2>
+            <h2 class="text-2xl md:text-3xl font-bold text-white mb-4">وعد Atlas Vision</h2>
             <p class="text-neutral-400 max-w-xl mx-auto mb-8">
-                نحن واثقون أن Vision Pro TRANSLATOR ستغير طريقة سفرك وعملك.
+                نحن واثقون أن Atlas Vision ستغير طريقة سفرك وعملك.
                 جربها لمدة 30 يوماً. إذا لم تشعر بالفرق، سنعيد لك استثمارك بالكامل.
             </p>
             <div
@@ -598,7 +598,7 @@
                         </span>
                     </summary>
                     <div class="px-6 pb-6 text-sm text-neutral-400 leading-relaxed border-t border-white/5 pt-4">
-                        نعم. يستخدم Vision Pro TRANSLATOR معالجة اللغة الطبيعية المتقدمة لفهم وترجمة اللغة العربية
+                        نعم. يستخدم Atlas Vision معالجة اللغة الطبيعية المتقدمة لفهم وترجمة اللغة العربية
                         الفصحى
                         بالإضافة إلى اللهجات الخليجية والمصرية والشامية بدقة عالية.
                     </div>
@@ -676,7 +676,7 @@
                                 الطلب</span>
 
                             <div class="mt-8">
-                                <h2 class="text-3xl font-bold text-white mb-2">Vision Pro TRANSLATOR</h2>
+                                <h2 class="text-3xl font-bold text-white mb-2">Atlas Vision</h2>
                                 <p class="text-neutral-500 text-sm mb-6">النسخة النخبة - أسود مطفي</p>
 
                                 <!-- Pricing -->
@@ -769,22 +769,22 @@
                                 <div class="carousel-slide active absolute inset-0">
                                     <img src="product-1.png"
                                         class="w-full h-full object-contain transition-transform duration-700 hover:scale-105"
-                                        alt="Vision Pro TRANSLATOR - منظر 1">
+                                        alt="Atlas Vision - منظر 1">
                                 </div>
                                 <div class="carousel-slide absolute inset-0">
                                     <img src="product-2.png"
                                         class="w-full h-full object-contain transition-transform duration-700 hover:scale-105"
-                                        alt="Vision Pro TRANSLATOR - منظر 2">
+                                        alt="Atlas Vision - منظر 2">
                                 </div>
                                 <div class="carousel-slide absolute inset-0">
                                     <img src="product-3.png"
                                         class="w-full h-full object-contain transition-transform duration-700 hover:scale-105"
-                                        alt="Vision Pro TRANSLATOR - منظر 3">
+                                        alt="Atlas Vision - منظر 3">
                                 </div>
                                 <div class="carousel-slide absolute inset-0">
                                     <img src="product-4.png"
                                         class="w-full h-full object-contain transition-transform duration-700 hover:scale-105"
-                                        alt="Vision Pro TRANSLATOR - منظر 4">
+                                        alt="Atlas Vision - منظر 4">
                                 </div>
                             </div>
 
@@ -834,7 +834,7 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-8 mb-12">
                 <div>
-                    <span class="text-lg font-bold text-white tracking-tight">Vision Pro TRANSLATOR</span>
+                    <span class="text-lg font-bold text-white tracking-tight">Atlas Vision</span>
                     <p class="text-xs text-neutral-500 mt-2 max-w-xs">
                         إعادة تعريف التواصل الإنساني من خلال الذكاء المعزز
                         <br>الكويت • دبي • الرياض
@@ -862,7 +862,7 @@
             <div class="w-full h-[1px] bg-white/5 mb-8"></div>
 
             <div class="flex flex-col md:flex-row justify-between items-center gap-6">
-                <p class="text-xs text-neutral-600">© 2025 Vision Pro TRANSLATOR. جميع الحقوق محفوظة.</p>
+                <p class="text-xs text-neutral-600">© 2025 Atlas Vision. جميع الحقوق محفوظة.</p>
 
                 <div class="flex gap-6 text-[10px] font-medium uppercase tracking-widest text-neutral-500">
                     <a href="#" class="hover:text-white transition-colors">سياسة الشحن</a>
@@ -929,14 +929,10 @@
         }, 5000);
 
         // 3. Buy Button
+
         document.getElementById('buyBtn').addEventListener('click', function (e) {
-            const btn = this;
-            const textSpan = btn.querySelector('span');
-            textSpan.innerText = 'جاري التحويل إلى بوابة الدفع الآمنة...';
-            btn.classList.add('opacity-80', 'cursor-wait');
-            setTimeout(() => {
-                window.location.href = 'https://buy.stripe.com/3cI5kD7kscaY9sW7GD2wU00';
-            }, 1000);
+            // Payment link removed
+            console.log('Buy button clicked');
         });
 
         // 4. Mobile Menu
